--- a/proyecto angular/src/app/footer/footer.component.html
+++ b/proyecto angular/src/app/footer/footer.component.html
@@ -1,24 +1,30 @@
-<div class="container-fluid">
-    <footer class="text-center text-lg-start" >
-        <div class="container py-2">
-            <p class="text-center text-white my-2">
-            &copy; {{proyecto.anio+' '+proyecto.nombreProyecto+' | '+tecnologia.leyenda+tecnologia.tec1+
-            ''+tecnologia.tec2+' | Autor: '+autor}}
-            </p>
-        </div>
-        <div class="container d-flex justify-content-center py-5">
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #8c5fd0;">
-            <i class="fab fa-facebook-f"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #8c5fd0;">
-            <i class="fab fa-youtube"></i>
-        </button>        
-        </div>  
-        
-        <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2024 Copyright:
-        <a class="text-white" href="https://www.unicauca.edu.co/">Universidad del Cauca</a>
-        </div>        
-    </footer>
-</div>
+<!-- Ruta: src/app/footer/footer.component.html (limpio) -->
+<footer class="pt-5 pb-4">
+  <div class="container-fluid text-center text-md-start">
+    <div class="row text-center text-md-start">
 
+      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <h5 class="text-uppercase mb-4 fw-bold">Barbería JD</h5>
+        <p>
+          Fusionamos tradición y elegancia para realzar lo mejor de ti.
+        </p>
+        <p>Perfección en cada detalle.</p>
+      </div>
+
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h5 class="text-uppercase mb-4 fw-bold">Tienda</h5>
+        <p><a href="#">Responsabilidad Social</a></p>
+        <p><a href="#">Trabaja con Nosotros</a></p>
+        <p><a href="#">Proveedores</a></p>
+        <p><a href="#">Código de ética</a></p>
+      </div>
+
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+        <h5 class="text-uppercase mb-4 fw-bold">Contáctanos</h5>
+        <p><i class="bi bi-telephone"></i> SERVICIO AL CLIENTE:  312 3456789</p>
+        <p><i class="bi bi-clock"></i> Lunes a Viernes (9:00 am - 6:00 pm) </p>
+      </div>
+
+    </div>
+  </div>
+</footer>
