--- a/proyecto angular/src/app/header/header.component.html
+++ b/proyecto angular/src/app/header/header.component.html
@@ -1,22 +1,46 @@
-<div class="container-fluid">
-    <header>         
-        <div class="align-items-center">
-          <div class="profile-info">
-            <h1>{{nombres}} {{apellidos}}</h1>
-            <h3>{{disciplina}}</h3>
-            <p>{{descripcion}}</p>              
-            
-            <div class="social-icons">
-              <a href="" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-              <a href="" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-              <a href="" title="Email"><i class="fas fa-envelope"></i></a>
-            </div>
-          </div>
-        </div>         
-    </header>
-</div>
+<!-- Ruta: src/app/header/header.component.html -->
+<header>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <!-- Logo/Frase de la tienda -->
+      <a class="navbar-brand" routerLink="/">Barbería JD</a>
 
+      <!-- Botón Hamburguesa para móviles -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <!-- Menú de Navegación Colapsable -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/verCategorias">Servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/ofertas">Ofertas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/cupones">Cupones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/ayuda">Ayuda/PQR</a>
+          </li>
+        </ul>
 
+        <!-- Enlace de "Iniciar Sesión" a la derecha -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" (click)="switchRole()" style="cursor: pointer;">
+              <i class="bi" [class.bi-shield-lock-fill]="currentRole === 'Comprador'"
+                [class.bi-eye-fill]="currentRole === 'Administrador'"></i>
 
-
+              <span *ngIf="currentRole === 'Comprador'"> Modo Administrador</span>
+              <span *ngIf="currentRole === 'Administrador'"> Ver como Comprador</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
