--- a/proyecto angular/src/app/ver-productos-por-categorias/ver-productos-por-categorias.component.html
+++ b/proyecto angular/src/app/ver-productos-por-categorias/ver-productos-por-categorias.component.html
@@ -1,5 +1,5 @@
 <!-- Ruta: src/app/ver-productos-por-categorias/ver-productos-por-categorias.component.html -->
-<div class="container-fluid mt-4">
+<div class="container-fluid mt-4 py-5">
     <!-- Fila principal que contendrá nuestras dos columnas -->
     <div class="row">
 
