--- a/proyecto angular/src/app/ver-productos-por-categorias/ver-productos-por-categorias.component.html
+++ b/proyecto angular/src/app/ver-productos-por-categorias/ver-productos-por-categorias.component.html
@@ -59,7 +59,7 @@
                     <div class="card h-100 product-card">
                         <!-- CARA FRONTAL DE LA TARJETA -->
                         <div class="card-front">
-                            <img src="https://picsum.photos/300/200" class="card-img-top" [alt]="producto.nombre">
+                            <img [src]="producto.imagen" class="card-img-top" [alt]="producto.nombre">
 
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">{{ producto.nombre }}</h5>
@@ -68,10 +68,8 @@
                             </div>
 
                             <!-- Badge para el estado  -->
-                            <span *ngIf="producto.estado === 'Disponible'"
-                                class="badge bg-success product-badge">Disponible</span>
-                            <span *ngIf="producto.estado === 'No Disponible'" class="badge bg-danger product-badge">No
-                                Disponible</span>
+                            <span *ngIf="producto.estado === true" class="badge bg-success">Disponible</span>
+                            <span *ngIf="producto.estado === false" class="badge bg-danger">No Disponible</span>
                         </div>
 
                         <!-- CARA TRASERA DE LA TARJETA -->
@@ -81,7 +79,7 @@
                             <div class="mt-auto text-end">
                                 <span class="duration-badge">
                                     <i class="bi bi-clock-fill me-1"></i>
-                                    {{ producto.duracion }}
+                                    {{ producto.duracionMin }} min
                                 </span>
                             </div>
                         </div>
